# uk-real-wages-youth-labour-market

./: .gitattributes  .gitignore  AGENTS.md  Makefile  PORTFOLIO.md  README.md  RELEASE_CHECKLIST.md  REVIEWER_GUIDE.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  full_pipeline.yml  pipeline-evidence.yml
config/: age_group_mapping.yaml  analysis.yaml  claims.yaml  sources.lock.yaml  sources.yaml
dashboard/: app.py
docs/: reviewer_guide.md  v2_expansion_plan.md
docs/superpowers/plans/: 2026-07-02-uk-real-wages-pipeline.md  2026-07-10-v2-hardening-reconciliation.md
docs/superpowers/specs/: 2026-07-10-v2-hardening-reconciliation-design.md
experiments/: baseline.yaml  sensitivity_base_2020.yaml  sensitivity_base_2021.yaml  sensitivity_calendar_year_inflation.yaml  sensitivity_cpi.yaml  sensitivity_cpi_calendar_year.yaml  sensitivity_exclude_2020.yaml  sensitivity_full_time_only.yaml  sensitivity_mean_weekly.yaml  stress_youth_definition.yaml
notebooks/: 01_explore_sources.ipynb  02_analysis_checks.ipynb  option_b_walkthrough.ipynb
releases/v2/evidence/: README.md  age_group_real_earnings_change.csv  ashe_composition_audit.md  ashe_quality_availability.md  ashe_uncertainty_bands.md  claim_confidence.md  final_claims.md  (+12 more)
reports/: methodology.md  policy_brief.md  research_note.md
src/uk_wages/: __init__.py  analysis.py  ashe_composition.py  ashe_decomposition.py  ashe_quality.py  charts.py  claim_confidence.py  claims.py  clean_a05.py  clean_ashe.py  clean_cpi.py  clean_earn01.py  clean_region_ashe.py  clean_rti.py  dashboard_logic.py  download.py  evidence.py  experiment_runner.py  experiment_schema.py  final_claims.py  fragility_diagnostics.py  lineage.py  minimum_wage.py  option_b.py  pipeline.py  release_package.py  research_note.py  robustness.py  rti_analysis.py  rti_triangulation.py  source_validation.py  triangulation.py  utils.py
tests/: test_ashe_composition.py  test_ashe_quality.py  test_claim_confidence_and_lineage.py  test_claim_language_guardrails.py  test_cleaning.py  test_dashboard_logic.py  test_experiment_harness.py  test_final_evidence_package.py  test_fragility_diagnostics.py  test_option_a_analytical_upgrades.py  test_option_b_ds_upgrade.py  test_pipeline.py  test_quality_gates.py  test_real_wage_calcs.py  test_release_operations.py  test_release_packaging.py  test_v2_sources.py
