[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uk-real-wages-youth-labour-market"
version = "0.1.0"
description = "Reproducible ONS-based analysis of UK real wages and youth labour market stress since 2019."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "jupyter>=1.0",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "plotly>=5.22",
  "pyarrow>=16.0",
  "PyYAML>=6.0",
  "requests>=2.32",
  "streamlit>=1.36",
  "xlrd>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

